--- a/Yasuo and Yone/Yasuo and Yone.csproj
+++ b/Yasuo and Yone/Yasuo and Yone.csproj
@@ -40,25 +40,25 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EnsoulSharp.Sandbox">
-      <HintPath>C:\Users\FunnySlayer\Pictures\pixiv\EnsoulSharp\System\EnsoulSharp.Sandbox.dll</HintPath>
+      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\EnsoulSharp.Sandbox.dll</HintPath>
     </Reference>
     <Reference Include="EnsoulSharp.SDK">
-      <HintPath>C:\Users\FunnySlayer\Pictures\pixiv\EnsoulSharp\System\EnsoulSharp.SDK.dll</HintPath>
+      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\EnsoulSharp.SDK.dll</HintPath>
     </Reference>
     <Reference Include="EnsoulSharp.Wrapper">
-      <HintPath>C:\Users\FunnySlayer\Pictures\pixiv\EnsoulSharp\System\EnsoulSharp.Wrapper.dll</HintPath>
+      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\EnsoulSharp.Wrapper.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>C:\Users\FunnySlayer\Pictures\pixiv\EnsoulSharp\System\Newtonsoft.Json.dll</HintPath>
+      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
-      <HintPath>C:\Users\FunnySlayer\Pictures\pixiv\EnsoulSharp\System\SharpDX.dll</HintPath>
+      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D9">
-      <HintPath>C:\Users\FunnySlayer\Pictures\pixiv\EnsoulSharp\System\SharpDX.Direct3D9.dll</HintPath>
+      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="SPrediction">
-      <HintPath>C:\Users\FunnySlayer\Pictures\pixiv\EnsoulSharp\System\SPrediction.dll</HintPath>
+      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\SPrediction.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
