--- a/Xerath/EnsoulSharp.Xerath.csproj
+++ b/Xerath/EnsoulSharp.Xerath.csproj
@@ -4,10 +4,10 @@
   <PropertyGroup>
     <Configuration Condition=" '$(Configuration)' == '' ">Release</Configuration>
     <Platform Condition=" '$(Platform)' == '' ">AnyCPU</Platform>
-    <ProjectGuid>{FBDB36F2-192F-4508-83E5-2A62E4403A91}</ProjectGuid>
+    <ProjectGuid>{9D6939AB-AE1D-4BB1-B0DD-7E1F82F2BC57}</ProjectGuid>
     <OutputType>Exe</OutputType>
-    <RootNamespace>ConsoleApp1</RootNamespace>
-    <AssemblyName>ConsoleApp1</AssemblyName>
+    <RootNamespace>EnsoulSharp.Xerath</RootNamespace>
+    <AssemblyName>EnsoulSharp.Xerath</AssemblyName>
     <TargetFrameworkVersion>v4.7.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <AutoGenerateBindingRedirects>true</AutoGenerateBindingRedirects>
@@ -15,6 +15,7 @@
     <PreBuildEvent />
     <PostBuildEvent />
     <OutputPath>bin\Release</OutputPath>
+    <TargetFrameworkProfile />
   </PropertyGroup>
   <PropertyGroup Condition=" '$(Configuration)|$(Platform)' == 'Debug|AnyCPU' ">
     <PlatformTarget>x86</PlatformTarget>
@@ -35,13 +36,7 @@
     <ErrorReport>prompt</ErrorReport>
     <WarningLevel>4</WarningLevel>
   </PropertyGroup>
-  <PropertyGroup>
-    <StartupObject />
-  </PropertyGroup>
   <ItemGroup>
-    <Reference Include="EnsoulSharp.Sandbox">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\EnsoulSharp.Sandbox.dll</HintPath>
-    </Reference>
     <Reference Include="EnsoulSharp.SDK">
       <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\EnsoulSharp.SDK.dll</HintPath>
     </Reference>
@@ -51,17 +46,8 @@
     <Reference Include="FunnySlayerCommon">
       <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\FunnySlayerCommon.dll</HintPath>
     </Reference>
-    <Reference Include="Newtonsoft.Json">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\Newtonsoft.Json.dll</HintPath>
-    </Reference>
     <Reference Include="SharpDX">
       <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\SharpDX.dll</HintPath>
-    </Reference>
-    <Reference Include="SharpDX.Direct3D9">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\SharpDX.Direct3D9.dll</HintPath>
-    </Reference>
-    <Reference Include="SPrediction">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\SPrediction.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -75,32 +61,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="DaoHungAIO_Evade\BlockSpellData.cs" />
-    <Compile Include="DaoHungAIO_Evade\BlockSpellDataBase.cs" />
-    <Compile Include="DaoHungAIO_Evade\Champion.cs" />
-    <Compile Include="DaoHungAIO_Evade\Collision.cs" />
-    <Compile Include="DaoHungAIO_Evade\CollisionObjectTypes.cs" />
-    <Compile Include="DaoHungAIO_Evade\DamageBoostDatabase.cs" />
-    <Compile Include="DaoHungAIO_Evade\DetectedCollision.cs" />
-    <Compile Include="DaoHungAIO_Evade\DetectionType.cs" />
-    <Compile Include="DaoHungAIO_Evade\EvadeManager.cs" />
-    <Compile Include="DaoHungAIO_Evade\EvadeOthers.cs" />
-    <Compile Include="DaoHungAIO_Evade\EvadeSpellData.cs" />
-    <Compile Include="DaoHungAIO_Evade\EvadeSpellDatabase.cs" />
-    <Compile Include="DaoHungAIO_Evade\EvadeTargetManager.cs" />
-    <Compile Include="DaoHungAIO_Evade\FastPredResult.cs" />
-    <Compile Include="DaoHungAIO_Evade\FoundIntersection.cs" />
-    <Compile Include="DaoHungAIO_Evade\Geometry.cs" />
-    <Compile Include="DaoHungAIO_Evade\IsSafeResult.cs" />
-    <Compile Include="DaoHungAIO_Evade\SafePathResult.cs" />
-    <Compile Include="DaoHungAIO_Evade\Skillshot.cs" />
-    <Compile Include="DaoHungAIO_Evade\SkillshotDetector.cs" />
-    <Compile Include="DaoHungAIO_Evade\SkillShotType.cs" />
-    <Compile Include="DaoHungAIO_Evade\SpellData.cs" />
-    <Compile Include="DaoHungAIO_Evade\SpellDatabase.cs" />
-    <Compile Include="DaoHungAIO_Evade\Utils.cs" />
+    <Compile Include="MenuWrapper.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Xerath.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
