--- a/Domination/DominationAIO.csproj
+++ b/Domination/DominationAIO.csproj
@@ -92,6 +92,9 @@
     <Reference Include="EnsoulSharp.Wrapper">
       <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\EnsoulSharp.Wrapper.dll</HintPath>
     </Reference>
+    <Reference Include="FunnySlayerCommon">
+      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\FunnySlayerCommon.dll</HintPath>
+    </Reference>
     <Reference Include="Newtonsoft.Json">
       <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\Newtonsoft.Json.dll</HintPath>
     </Reference>
