--- a/Domination/DominationAIO.csproj
+++ b/Domination/DominationAIO.csproj
@@ -117,6 +117,7 @@
     <Compile Include="Champions\Akali.cs" />
     <Compile Include="Champions\Brand.cs" />
     <Compile Include="Champions\Ezreal.cs" />
+    <Compile Include="Champions\Pyke.cs" />
     <Compile Include="Champions\Sion.cs" />
     <Compile Include="Champions\GangPlank\Barrel.cs" />
     <Compile Include="Champions\GangPlank\Config.cs" />
