--- a/Domination/DominationAIO.csproj
+++ b/Domination/DominationAIO.csproj
@@ -118,6 +118,7 @@
     <Compile Include="Champions\Brand.cs" />
     <Compile Include="Champions\Ezreal.cs" />
     <Compile Include="Champions\Pyke.cs" />
+    <Compile Include="Champions\Rengar.cs" />
     <Compile Include="Champions\Sion.cs" />
     <Compile Include="Champions\GangPlank\Barrel.cs" />
     <Compile Include="Champions\GangPlank\Config.cs" />
