--- a/SebbyLib/SebbyLib Ported/SebbyLib Ported.csproj
+++ b/SebbyLib/SebbyLib Ported/SebbyLib Ported.csproj
@@ -54,9 +54,6 @@
     <Reference Include="SharpDX.Direct3D9">
       <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
-    <Reference Include="SPrediction">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\SPrediction.dll</HintPath>
-    </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
     <Reference Include="System.Drawing" />
@@ -80,6 +77,24 @@
     <Compile Include="Orbwalking.cs" />
     <Compile Include="PredictionOktw.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SPrediction\AIHeroClientExtensions.cs" />
+    <Compile Include="SPrediction\ArcPrediction.cs" />
+    <Compile Include="SPrediction\CirclePrediction.cs" />
+    <Compile Include="SPrediction\ClipperWrapper.cs" />
+    <Compile Include="SPrediction\Collision.cs" />
+    <Compile Include="SPrediction\ConePrediction.cs" />
+    <Compile Include="SPrediction\ConfigMenu.cs" />
+    <Compile Include="SPrediction\Drawings.cs" />
+    <Compile Include="SPrediction\Geometry.cs" />
+    <Compile Include="SPrediction\LinePrediction.cs" />
+    <Compile Include="SPrediction\MinionManager.cs" />
+    <Compile Include="SPrediction\PathTracker.cs" />
+    <Compile Include="SPrediction\Prediction.cs" />
+    <Compile Include="SPrediction\RingPrediction.cs" />
+    <Compile Include="SPrediction\SpellExtensions.cs" />
+    <Compile Include="SPrediction\StasisPrediction.cs" />
+    <Compile Include="SPrediction\Utility.cs" />
+    <Compile Include="SPrediction\VectorPrediction.cs" />
   </ItemGroup>
   <ItemGroup>
     <Analyzer Include="..\..\..\..\EnsoulSharp\System\EnsoulSharp.SDK.dll" />
