--- a/Xerath/Xerath By EnsoulSharp.csproj
+++ b/Xerath/Xerath By EnsoulSharp.csproj
@@ -47,7 +47,7 @@
       <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\FunnySlayerCommon.dll</HintPath>
     </Reference>
     <Reference Include="SebbyLibPorted">
-      <HintPath>..\..\..\EnsoulSharp\System\SebbyLibPorted.dll</HintPath>
+      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\SebbyLibPorted.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
       <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\System\SharpDX.dll</HintPath>
