Simple Blit Added

--- a/Domination/DominationAIO.csproj
+++ b/Domination/DominationAIO.csproj
@@ -118,6 +118,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Champions\Akali.cs" />
+    <Compile Include="Champions\Blit.cs" />
     <Compile Include="Champions\Brand.cs" />
     <Compile Include="Champions\Ezreal.cs" />
     <Compile Include="Champions\MasterYi.cs" />
