--- a/Domination/DominationAIO.csproj
+++ b/Domination/DominationAIO.csproj
@@ -123,6 +123,7 @@
     <Compile Include="Champions\Ezreal.cs" />
     <Compile Include="Champions\MasterYi.cs" />
     <Compile Include="Champions\Pyke.cs" />
+    <Compile Include="Champions\Qiyana.cs" />
     <Compile Include="Champions\Rengar.cs" />
     <Compile Include="Champions\Samira.cs" />
     <Compile Include="Champions\Sion.cs" />
