--- a/Domination/DominationAIO.csproj
+++ b/Domination/DominationAIO.csproj
@@ -168,6 +168,7 @@
     <Compile Include="Champions\PRADAVayneReborn\Program.cs" />
     <Compile Include="Champions\Riven By FunnySlayer.cs" />
     <Compile Include="Champions\Aphelios By FunnySlayer.cs" />
+    <Compile Include="Champions\TahmKench.cs" />
     <Compile Include="Champions\URF_Lucian.cs" />
     <Compile Include="Champions\Yasuo Credit Brian.cs" />
     <Compile Include="Champions\Zoe.cs" />
