--- a/Yasuo and Yone/Yasuo and Yone.csproj
+++ b/Yasuo and Yone/Yasuo and Yone.csproj
@@ -41,28 +41,25 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="EnsoulSharp">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\Reference\EnsoulSharp.dll</HintPath>
+      <HintPath>E:\New download\EnsoulSharp\Reference\EnsoulSharp.dll</HintPath>
     </Reference>
     <Reference Include="EnsoulSharp.SDK">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\Reference\EnsoulSharp.SDK.dll</HintPath>
-    </Reference>
-    <Reference Include="FunnySlayerCommon">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\Reference\FunnySlayerCommon.dll</HintPath>
+      <HintPath>E:\New download\EnsoulSharp\Reference\EnsoulSharp.SDK.dll</HintPath>
     </Reference>
     <Reference Include="log4net">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\Reference\log4net.dll</HintPath>
+      <HintPath>E:\New download\EnsoulSharp\Reference\log4net.dll</HintPath>
     </Reference>
     <Reference Include="Newtonsoft.Json">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\Reference\Newtonsoft.Json.dll</HintPath>
+      <HintPath>E:\New download\EnsoulSharp\Reference\Newtonsoft.Json.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\Reference\SharpDX.dll</HintPath>
+      <HintPath>E:\New download\EnsoulSharp\Reference\SharpDX.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Direct3D9">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\Reference\SharpDX.Direct3D9.dll</HintPath>
+      <HintPath>E:\New download\EnsoulSharp\Reference\SharpDX.Direct3D9.dll</HintPath>
     </Reference>
     <Reference Include="SharpDX.Mathematics">
-      <HintPath>C:\Users\FunnySlayer\Desktop\EnsoulSharp\Reference\SharpDX.Mathematics.dll</HintPath>
+      <HintPath>E:\New download\EnsoulSharp\Reference\SharpDX.Mathematics.dll</HintPath>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core" />
@@ -102,6 +99,47 @@
     <Compile Include="DaoHungAIO_Evade\Utils.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="SebbyLibPorted\Cache.cs" />
+    <Compile Include="SebbyLibPorted\Events.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\AoePrediction.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\Collision.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\CollisionableObjects.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\HitChance.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\Prediction.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\PredictionInput.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\PredictionOutput.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\SkillshotType.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSPrediction\StoredPath.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSspell.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\FSTargetSelector.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\MenuClass.cs" />
+    <Compile Include="SebbyLibPorted\FunnySlayerCommon\OnAction.cs" />
+    <Compile Include="SebbyLibPorted\Geometry.cs" />
+    <Compile Include="SebbyLibPorted\HealthPrediction.cs" />
+    <Compile Include="SebbyLibPorted\MEC.cs" />
+    <Compile Include="SebbyLibPorted\MenuExtensions.cs" />
+    <Compile Include="SebbyLibPorted\Movement.cs" />
+    <Compile Include="SebbyLibPorted\OktwCommon.cs" />
+    <Compile Include="SebbyLibPorted\Orbwalking.cs" />
+    <Compile Include="SebbyLibPorted\PredictionOktw.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\AIHeroClientExtensions.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\ArcPrediction.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\CirclePrediction.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\ClipperWrapper.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\Collision.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\ConePrediction.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\ConfigMenu.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\Drawings.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\Geometry.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\LinePrediction.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\MinionManager.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\PathTracker.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\Prediction.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\RingPrediction.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\SpellExtensions.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\StasisPrediction.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\Utility.cs" />
+    <Compile Include="SebbyLibPorted\SPrediction\VectorPrediction.cs" />
     <Compile Include="SPrediction\AIHeroClientExtensions.cs" />
     <Compile Include="SPrediction\ArcPrediction.cs" />
     <Compile Include="SPrediction\CirclePrediction.cs" />
